--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,62 @@ plugins {
     id 'java'
 }
 
-group = 'com.mjc.school'
-version = '1.0-SNAPSHOT'
-
-repositories {
-    mavenCentral()
+wrapper {
+    gradleVersion = gradlewVersion
 }
 
-dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-}
 
-test {
-    useJUnitPlatform()
+subprojects {
+    apply plugin: 'java'
+    group = 'com.mjc.school'
+
+    sourceCompatibility = javaVersion
+    targetCompatibility = javaVersion
+
+    repositories {
+        mavenCentral()
+    }
+
+
+    dependencies {
+
+        implementation "org.springframework:spring-context:$springVersion"
+        implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.7'
+        implementation 'org.springframework.boot:spring-boot-starter-web:2.7.7'
+        implementation group: 'org.springframework.boot', name: 'spring-boot-starter-hateoas', version: '2.7.7'
+        testImplementation "org.springframework:spring-test:$springVersion"
+        testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.7'
+        implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.7.7'
+        implementation group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version: '2.7.7', ext: 'pom'
+
+        implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.2'
+        implementation group: 'org.springframework.security', name: 'spring-security-config', version: '2.7.7'
+        implementation group: 'org.springframework.security', name: 'spring-security-core', version: '2.7.7'
+        testImplementation 'org.springframework.security:spring-security-test:5.8.1'
+
+        implementation 'org.postgresql:postgresql:42.6.0'
+
+
+        implementation 'javax.xml.bind:jaxb-api:2.3.1'
+        implementation 'javax.validation:validation-api:2.0.1.Final'
+
+
+        testImplementation "org.junit.jupiter:junit-jupiter-api:$jupiterVersion"
+        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$jupiterVersion"
+
+        testImplementation "com.tngtech.archunit:archunit:$archUnitVersion"
+        testImplementation "com.tngtech.archunit:archunit-junit5:1.0.0"
+
+        testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.24.2'
+
+        annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
+        implementation "org.mapstruct:mapstruct:$mapstructVersion"
+        testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '4.5.1'
+        compileOnly 'org.projectlombok:lombok:1.18.26'
+        annotationProcessor 'org.projectlombok:lombok:1.18.26'
+
+    }
+    test {
+        useJUnitPlatform()
+    }
 }
