--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,5 @@
 rootProject.name = 'gradle-app-template'
+include 'module-repository'
+include 'module-service'
+include 'module-web'
+include 'module-main'
