--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,9 @@ subprojects {
         implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.7.7'
         implementation group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version: '2.7.7', ext: 'pom'
 
-        implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.2'
+        implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+        runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+        runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
         implementation group: 'org.springframework.security', name: 'spring-security-config', version: '2.7.7'
         implementation group: 'org.springframework.security', name: 'spring-security-core', version: '2.7.7'
         testImplementation 'org.springframework.security:spring-security-test:5.8.1'
