--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+    id 'java-base'
 }
 
 wrapper {
@@ -9,6 +9,7 @@ wrapper {
 
 subprojects {
     apply plugin: 'java'
+    apply plugin: 'jacoco'
     group = 'com.mjc.school'
 
     sourceCompatibility = javaVersion
@@ -30,9 +31,7 @@ subprojects {
         implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.7.7'
         implementation group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version: '2.7.7', ext: 'pom'
 
-        implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-        runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-        runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+        implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.2'
         implementation group: 'org.springframework.security', name: 'spring-security-config', version: '2.7.7'
         implementation group: 'org.springframework.security', name: 'spring-security-core', version: '2.7.7'
         testImplementation 'org.springframework.security:spring-security-test:5.8.1'
@@ -57,7 +56,6 @@ subprojects {
         testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '4.5.1'
         compileOnly 'org.projectlombok:lombok:1.18.26'
         annotationProcessor 'org.projectlombok:lombok:1.18.26'
-
     }
     test {
         useJUnitPlatform()
