--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,5 @@
-rootProject.name = 'gradle-app-template'
+rootProject.name = 'Gradle-app-template'
+
 include 'module-repository'
 include 'module-service'
 include 'module-web'
-include 'module-main'
-include 'module-main'
