--- a/module-web/build.gradle
+++ b/module-web/build.gradle
@@ -3,10 +3,9 @@ plugins {
     id 'org.springframework.boot' version '2.7.7'}
 
 dependencies {
+    implementation project(":module-repository")
     implementation project(':module-service')
     implementation 'org.springframework:spring-aspects:6.0.11'
     implementation 'com.github.shalousun:datasource-aspect:0.1'
     implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
-
-
 }
