--- a/module-service/build.gradle
+++ b/module-service/build.gradle
@@ -1,13 +1,17 @@
 plugins {
     id 'java-library'
-    id 'org.springframework.boot' version '2.7.7'}
+    id 'org.springframework.boot' version '2.7.7'
+}
+
+ext {
+    lombokVersion = '1.18.26'
+}
 
 dependencies {
     implementation project(':module-repository')
-    implementation 'org.projectlombok:lombok:1.18.26'
-
-
+    implementation group: 'org.projectlombok', name: 'lombok', version: lombokVersion
 }
+
 bootJar {
     enabled = false
 }
